2005-02-16  Marcus Meissner  <marcus@jet.franken.de>
	
	* sierra.c: Added Pentax Optio 450. Thanks to Jack
	  for lending me his camera for some minutes. :)
	  (Capture works, but only if you plug it in with the lens
	   extracted already.)

2005-02-14  Marcus Meissner <marcus@jet.franken.de>
	* library.c, sierra-desc.h, sierra.c, sierra.h, sierra-usbwrap.c:
	  Nikon Coolpix * and Pentax cameras also support the Sierra 
	  protocol (usb wrapped), however with different command bytes.

	  This patch adds support to specify the usb wrapping camera
	  type and also adds the Nikon Coolpix 2500.

2005-01-22  Patrick Mansfield <patmans@users.sourceforge.net>
	* sierra-desc.c, sierra-desc.h: Add code in case we ever need a
	  GP_WIDGET_BUTTON/callback created, not currently used.

2005-01-05  Patrick Mansfield <patmans@users.sourceforge.net>
	* olympus-desc.c: Add other Olympus C750UZ camera settings, they
	  were using the C3040 ones except for the zoom. Also use
	  GP_WIDGET_MENU instead of GP_WIDGET_RADIO for the resolutions,
	  as the radio with many elements takes up to much space.

2005-01-04  Patrick Mansfield <patmans@users.sourceforge.net>
	* sierra-desc.c: Call gp_widget_set_name to properly set the
	  "name", so new gphoto2 --list-config and such are easier to
	  use.

2004-12-11  Patrick Mansfield <patmans@users.sourceforge.net>
	* sierra.c, sierra.h: Per report from Emmanuel Beranger, add and
	  use a SIERRA_MID_SPEED flag so we only use download speeds of
	  9600 to 38400 for the Olympus C820-L.

2004-07-30  Patrick Mansfield <patmans@users.sourceforge.net>
	* library.c, sierra.c, sierra.h: Patch from Sean Bruno
	  <sean.bruno@dsl-only.net> to support Toshiba cameras. Added and
	  use SIERRA_NO_USB_CLEAR and SIERRA_NO_REGISTER_40 flags.

2003-11-16  Patrick Mansfield <patmans@users.sourceforge.net>
	* library.c: Only do progress updates in sierra_get_string_register
	  if a command requires multiple packets.
