@@ -1,3 +1,12 @@
+2005-02-27  Marcus Meissner  <marcus@jet.franken.de>
+
+	Aurelien Jarno <aurelien@aurel32.net>
+	* library.c: Increase buffer size to the one we will try to
+	  to read. Newer libusb and kernels give more than 4k back to
+	  read()s.
+
+	  Debian bug#296708.
+
 2005-02-16  Marcus Meissner  <marcus@jet.franken.de>
 	
 	* sierra.c: Added Pentax Optio 450. Thanks to Jack
